# evm-proxy-tools

./: .aider.chat.history.md  .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  MISSING.md  PLAN.md  README.md
.aider.tags.cache.v3/: cache.db-shm  cache.db-wal
src/: consts.rs  detect.rs  errors.rs  lib.rs  proxy_inspector.rs  read.rs  types.rs  utils.rs
src/detector/: dynamic_detector.rs  mod.rs  static_detector.rs  types.rs
tests/: detector.rs
