[package]
name = "evm-proxy-tools"
version = "0.1.0"
authors = ["snf"]
edition = "2021"
description = "A comprehensive toolkit for detecting and analyzing Ethereum proxy contracts"
repository = "https://github.com/bitfinding/evm-proxy-tools"
documentation = "https://docs.rs/evm-proxy-tools"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["ethereum", "evm", "smart-contracts", "proxy", "analysis"]
categories = ["cryptography::cryptocurrencies", "development-tools"]
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[patch.crates-io]
# revm = { git = "https://github.com/bluealloy/revm/", tag = "v26" }
# revm-primitives = { git = "https://github.com/bluealloy/revm/", tag = "v26" }
# revm-interpreter = { git = "https://github.com/bluealloy/revm/", tag = "v26" }
# ruint = { git = "https://github.com/recmo/uint.git", tag = "v1.11.0", features = ["num-traits"] }

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

anyhow = "1.0"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
num-traits = "0.2"
ruint = { version = "1.11", features = ["num-traits"] }
thiserror = "1.0"
twoway = "0.2"

## alloy
alloy-primitives = "0.8"

## revm
revm = { version = "14"}
# revm-interpreter = { version = "5.0", features = ["serde"] }

bytes = "1.4"
ethers-providers = "2.0"
ethers-core = "2.0"
ethers-signers = "2.0"
ethers-contract = "2.0"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha3 = { version = "0.10.7", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hex-literal = "0.4"
once_cell = "1.18"

## async
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"]}
futures = { version = "0.3"}
async-stream = "0.3.5"
async-recursion = "1.0"

## crypto
# secp256k1 = { version = "0.27.0", default-features = false, features = [
#     "global-context",
#     "rand-std",
#     "recovery",
# ] }

## coverage
croaring = { version = "1.0", features = ["buildtime_bindgen"]}

# [target.'cfg(not(windows))'.dependencies]
# jemallocator = { version = "0.5", optional = true }
# jemalloc-ctl = { version = "0.5", optional = true }

# [features]
# default = ["jemalloc"]
# jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl"]
# jemalloc-prof = ["jemalloc", "jemallocator?/profiling"]

