[package]
name = "evm-proxy-tools"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["snf"]
description = "Detect and read EVM proxy contract implementations (EIP-1167, EIP-1967, EIP-2535, and more)"
license = "MIT"
repository = "https://github.com/snf/evm-proxy-tools"
keywords = ["ethereum", "evm", "proxy", "smart-contracts", "solidity"]
categories = ["cryptography::cryptocurrencies", "development-tools"]
readme = "README.md"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[patch.crates-io]
# revm = { git = "https://github.com/bluealloy/revm/", tag = "v26" }
# revm-primitives = { git = "https://github.com/bluealloy/revm/", tag = "v26" }
# revm-interpreter = { git = "https://github.com/bluealloy/revm/", tag = "v26" }
# ruint = { git = "https://github.com/recmo/uint.git", tag = "v1.11.0", features = ["num-traits"] }

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

anyhow = "1.0"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
num-traits = "0.2"
ruint = { version = "1.11.1", features = ["num-traits"] }
thiserror = "1.0"
twoway = "0.2"

## alloy
alloy = { version = "1.2", features = ["provider-http", "contract", "rpc-types", "sol-types"] }
alloy-primitives = { version = "1.5.2", features = ["serde"] }

## revm
revm = { version = "33.1.0", default-features = false, features = ["optional_block_gas_limit", "std", "secp256k1"] }

bytes = "1.4"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hex-literal = "0.4"
once_cell = "1.18"

## async
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"]}
futures = { version = "0.3"}

## crypto
# secp256k1 = { version = "0.27.0", default-features = false, features = [
#     "global-context",
#     "rand-std",
#     "recovery",
# ] }

## coverage
croaring = { version = "1.0", features = ["buildtime_bindgen"]}

# [target.'cfg(not(windows))'.dependencies]
# jemallocator = { version = "0.5", optional = true }
# jemalloc-ctl = { version = "0.5", optional = true }

# [features]
# default = ["jemalloc"]
# jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl"]
# jemalloc-prof = ["jemalloc", "jemallocator?/profiling"]

